--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,26 @@ body {
 .movie-app > .row > * {
   width: auto;
 }
+
+.image-container {
+  position: relative;
+  transition: transform 0.2s;
+}
+
+.image-container:hover .overlay {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.overlay {
+  position: absolute;
+  color: #fff;
+  background: rgba(0, 0, 0, 0.8);
+  width: 100%;
+  bottom: 0;
+  opacity: 0;
+  font-size: 20px;
+  padding: 20px;
+  text-align: center;
+  transition: 0.5s ease;
+}
