--- a/src/App.css
+++ b/src/App.css
@@ -33,4 +33,6 @@ body {
   padding: 20px;
   text-align: center;
   transition: 0.5s ease;
+  border-right: 12px solid white;
+  border-left: 12px solid white;
 }
