--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,21 @@ body {
   border-right: 12px solid white;
   border-left: 12px solid white;
 }
+
+.popup {
+  display: flex;
+  align-items: center;
+  height: 200px;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+  box-shadow: rgb(100 100 111 / 30%) 0px 7px 29px 0px;
+  background-color: white;
+  border: 2px solid rgb(240, 240, 240);
+  border-radius: 12px;
+  position: absolute;
+  width: 500px;
+  left: calc(50% - 250px);
+  top: calc(50% - 100px);
+}
